# Bank-System

./: Account.cpp  Account.h  AccountManager.cpp  AccountManager.h  CMakeLists.txt  Date.cpp  Date.h  FileStructure.h  Preloaded Accounts  README.md  Transaction.cpp  Transaction.h  TransactionDate.h  View.cpp  View.h  main.cpp  main_TRY
Google_tests/: AccountManager_TEST.cpp  CMakeLists.txt  TESTS.cpp  runAllTests.cpp
